# all-repos-depends

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
all_repos_depends/: config.py  depends.py  errors.py  generate.py  packages.py  server.py  types.py
all_repos_depends/lang/: js.py  python.py
all_repos_depends/templates/: base.mako  disambiguate.mako  external.mako  index.mako  redirect.mako  repo.mako
tests/: conftest.py  depends_test.py  generate_test.py  packages_test.py  server_test.py
tests/lang/: python_test.py
