[metadata]
name = all_repos_depends
version = 0.0.3
description = View the dependencies of your repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/all-repos-depends
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    all-repos>=1.3.0
    flask
    mako
    packaging
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    all-repos-depends-generate=all_repos_depends.generate:main
    all-repos-depends-server=all_repos_depends.server:main

[options.package_data]
all_repos_depends =
    templates/*.mako

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = *_mako

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
